--- a/src/main/resources/templates/Detailtask.html
+++ b/src/main/resources/templates/Detailtask.html
@@ -19,8 +19,6 @@
 <div class="fixed top-4 right-4 z-50">
     <div th:replace="~{fragments/alert/error :: ErrorAlert}"></div>
 </div>
-
-
 <div class="ml-12 lg:m-6 lg:px-32">
 
 <div class="bg-white p-8 rounded-lg pt-8" data-task-id="${taskforEdit.id}">
@@ -33,7 +31,7 @@
                       class="w-full p-2 border border-gray-300 rounded resize-none h-16"
                       rows="1" oninput="this.style.height = ''; this.style.height = this.scrollHeight + 'px';"
                       th:text="${taskforEdit.name}"
-                      required disabled>
+                      required>
                 </textarea>
         </div>
 
@@ -42,8 +40,12 @@
             <div class="w-1/2">
                 <label for="status" class="block text-gray-700">Estado</label>
                 <select id="status" name="status" class="w-full p-2 border border-gray-300 rounded">
-                    <option value="pendiente">Pendiente</option>
-                    <option value="completada">Completada</option>
+                    <th:block th:each="type : ${kanbanType}">
+                        <option th:selected="${taskforEdit.status == type.name}"
+                                th:value="${type.name}"
+                                th:text="${type.name}">
+                        </option>
+                    </th:block>
                 </select>
             </div>
 
@@ -56,16 +58,6 @@
         </div>
 
         <div class="flex space-x-4">
-            <!-- Primer select: Responsable -->
-<!--            <div class="w-1/2">-->
-<!--                <label for="user" class="block text-gray-700 font-semibold mb-2">Responsable</label>-->
-<!--                <select id="user" name="user" class="w-full p-3 border-2 border-gray-300 rounded-lg bg-gray-50 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 shadow-sm appearance-none h-40" multiple>-->
-<!--                    <th:block th:each="user : ${users}">-->
-<!--                        <option th:value="${user.id}" th:text="${user.username}"></option>-->
-<!--                    </th:block>-->
-<!--                </select>-->
-<!--            </div>-->
-
 
             <div class="w-1/2">
                 <label for="user" class="block text-gray-700">Responsable</label>
@@ -144,9 +136,10 @@
             responsable: responsableField,
             horas: horasField
         };
+        console.log(data);
     if (horasField>0) {
         // Enviar la solicitud POST a la API
-        fetch(`/update/task/${[[${taskforEdit.id}]]}`, {
+        fetch(`/update-task/${[[${taskforEdit.id}]]}`, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -155,25 +148,16 @@
         })
             .then(response => {
                 if (response.ok) {
-                    return response.text(); // Cambia a `response.json()` si esperas un JSON
+                    console.log(response.statusText);
+                    location.reload();
                 } else {
                     throw new Error('Error al actualizar la tarea.');
                 }
-            })
-            .then(result => {
-                console.log('Tarea actualizada:', result);
-                // alert('Tarea actualizada correctamente');
-                const currentUrl = window.location.href;
-                const newUrl = currentUrl.split('/edit')[0];
-                window.location.href = newUrl;
-                // Opcional: cerrar modal o redirigir
-                ModalForm.reset();
             })
             .catch(error => {
                 console.error('Error:', error);
             });
     }else{
-
         alert("las horas deben  ser mayores a 0");
     }
     });
