--- a/src/main/resources/templates/fragments/modal.html
+++ b/src/main/resources/templates/fragments/modal.html
@@ -18,8 +18,9 @@
           <div class="w-1/2">
             <label for="status" class="block text-gray-700">Estado</label>
             <select id="status" name="status" class="w-full p-2 border border-gray-300 rounded">
-              <option value="pendiente">Pendiente</option>
-              <option value="completada">Completada</option>
+              <th:block th:each="type : ${kanbanType}">
+                <option th:value="${type.name}" th:text="${type.name}"></option>
+              </th:block>
             </select>
           </div>
 
@@ -35,12 +36,23 @@
           <div class="w-1/2">
 
             <label for="horas" class="block text-gray-700">Proyecto</label>
-            <input type="text" id="proyect" name="proyect" class="w-full p-2 border border-gray-300 rounded" th:value="${filtro}" disabled>
+            <th:block th:if="${filtro == 'todas las Task'}">
+              <select id="proyect" name="proyect" class="w-full p-2 border border-gray-300 rounded">
+                <th:block th:each="proyect : ${proyects}">
+                  <option th:value="${proyect.name}" th:text="${proyect.name}"></option>
+                </th:block>
+              </select>
+            </th:block>
+
+            <th:block th:unless="${filtro == 'todas las Task'}">
+              <input type="text" id="proyect" name="proyect" class="w-full p-2 border border-gray-300 rounded" th:value="${filtro}" disabled>
+            </th:block>
+
           </div>
         </div>
 
         <div class="flex space-x-4">
-          <div class="w-1/2">
+          <div class="w-full">
             <label for="user" class="block text-gray-700">Responsable</label>
             <select id="user" name="user" multiple class="w-full  rounded-lg bg-gray-50 focus:ring-blue-500 shadow-sm appearance-none"
                     data-tom-select required>
@@ -51,10 +63,10 @@
           </div>
 
           <!-- Segundo input: Horas Estimadas -->
-          <div class="w-1/2">
-            <label for="horas" class="block text-gray-700">Horas Estimadas</label>
-            <input type="number" id="horas" name="horas" class="w-full p-2 border border-gray-300 rounded" step="0.01" required>
-          </div>
+<!--          <div class="w-1/2">-->
+<!--            <label for="horas" class="block text-gray-700">Horas Estimadas</label>-->
+<!--            <input type="number" id="horas" name="horas" class="w-full p-2 border border-gray-300 rounded" step="0.01" required >-->
+<!--          </div>-->
         </div>
 
         <!-- Descripción -->
