--- a/src/main/resources/templates/fragments/table-back.html
+++ b/src/main/resources/templates/fragments/table-back.html
@@ -1,28 +1,192 @@
 <div th:fragment="TaskTable">
 
-  <table class="min-w-full table-auto bg-white rounded-lg shadow-md">
-    <thead>
-    <tr class="bg-gray-800 text-white">
-      <th class="px-4 py-2 text-left">Nombre</th>
-      <th class="px-4 py-2 text-left">Descripción</th>
-      <th class="px-4 py-2 text-left">Estado</th>
-      <th class="px-4 py-2 text-left">Horas</th>
-      <th class="px-4 py-2 text-left">Fecha de Creación</th>
-      <th class="px-4 py-2 text-left">Última Actualización</th>
-    </tr>
-    </thead>
-    <tbody>
-    <!-- Recorrer las tareas y mostrarlas -->
-    <tr th:each="task : ${tasks}" class="border-t border-gray-300 hover:bg-gray-50">
-      <td class="px-4 py-2" th:text="${task.name}"></td>
-      <td class="px-4 py-2" th:text="${task.description}"></td>
-      <td class="px-4 py-2" th:text="${task.status}"></td>
-      <td class="px-4 py-2" th:text="${task.horas}"></td>
-      <td class="px-4 py-2" th:text="${task.creation_date}"></td>
-      <td class="px-4 py-2" th:text="${task.last_update_date}"></td>
-    </tr>
+  <div class="relative overflow-x-auto rounded-lg border border-gray-200 dark:border-gray-700">
+    <table class="w-full text-sm lg:text-xs text-left rtl:text-right text-gray-700 dark:text-gray-300">
+      <thead class="text-sm lg:text-xs font-semibold uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">Nombre</th>
+        <th scope="col" class="px-6 py-3">Responsable</th>
+        <th scope="col" class="px-6 py-3">Estado</th>
+        <th scope="col" class="px-6 py-3">tipo tarea</th>
+        <th scope="col" class="px-6 py-3">horas</th>
+        <th scope="col" class="px-6 py-3">Fecha de Creación</th>
+        <th scope="col" class="px-6 py-3">Acciones</th>
+        <!--                    <th scope="col" class="px-6 py-3">Tipo</th>-->
 
-    </tbody>
-  </table>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="task : ${tasks}"
+          class="bg-white dark:bg-gray-800 border-b dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-700">
+        <th scope="row"
+            class="px-6 py-4 font-medium text-gray-900 dark:text-white whitespace-nowrap overflow-hidden text-ellipsis "
+            style="max-width: 16rem;"
+            th:text="${task.name}"
+        >
+        </th>
+        <td class="px-6 py-4 w-auto max-w-3xs">
+          <div class="flex gap-1 overflow-x-auto whitespace-nowrap scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-100"
+               style="max-width: 10rem; ">
+                            <span th:each="responsable : ${task.responsables}"
+                                  class="px-2 py-1 text-xs font-semibold rounded-lg bg-indigo-500 text-white dark:bg-red-800 dark:text-red-200 mb-2">
+                                <span th:text="${responsable}"></span>
+                            </span>
+          </div>
+        </td>
 
+
+        <td class="px-6 py-4">
+                            <span th:text="${task.status}"
+                                  class="px-2 py-1 text-xs font-semibold rounded-lg"
+                                  th:classappend="${task.status == 'Completada' ? 'bg-green-100 text-green-700 dark:bg-green-800 dark:text-green-200' :
+                                                   task.status == 'En Progreso' ? 'bg-yellow-100 text-yellow-700 dark:bg-yellow-800 dark:text-yellow-200' :
+                                                   'bg-red-100 text-red-700 dark:bg-red-800 dark:text-red-200'}"></span>
+        </td>     <td class="px-6 py-4">
+                            <span th:text="${task.type}"
+                                  class="px-2 py-1 text-xs font-semibold rounded-lg bg-indigo-500 text-white dark:bg-green-800 dark:text-green-200"></span>
+      </td>
+        <td class="px-6 py-4">
+          <span class="text-sm font-medium text-gray-700" th:text="${task.horas}">0</span>
+        </td>
+        <td class="px-6 py-4" th:text="${#dates.format(task.creationDate, 'dd/MM/yyyy')}"></td>
+        <td class="px-6 py-4 text-right">
+          <a href="#" th:href="@{'/proyectos/' + ${filtro} + '/edit/' + ${task.id}}"
+             class="inline-block mb-1 px-3 py-1 text-sm font-medium text-blue-500 border border-blue-500 rounded-lg hover:bg-blue-500 hover:text-white dark:border-blue-600 dark:text-blue-600 dark:hover:bg-blue-600 dark:hover:text-white">
+            Detail
+          </a>
+
+          <button type="button" th:attr="onclick='completeTask(' + ${task.id} + ')'"
+                  class="inline-block px-3 py-1 text-sm font-medium text-green-500 border border-green-500 rounded-lg hover:bg-green-500 hover:text-white dark:border-green-600 dark:text-green-600 dark:hover:bg-green-600 dark:hover:text-white">
+            Completar
+          </button>
+        </td>
+        <!--                    <td class="px-6 py-4" th:text="${task.type}"></td>-->
+
+        <script>
+          function completeTask(taskId) {
+            console.log("id a actualizar: " + taskId);
+
+            fetch('/api/task/update', {
+              method: 'POST',
+              headers: {
+                'Content-Type': 'application/json',
+              },
+              body: JSON.stringify({ id: taskId }) // Enviamos el id como JSON
+            })
+                    .then(response => {
+                      if (!response.ok) {
+                        throw new Error('Error en la solicitud');
+                      }
+                      return response.json(); // Si la respuesta es válida, se parsea como JSON
+                    })
+                    .then(data => {
+                      console.log('Tarea completada:', data);
+                      // Aquí puedes actualizar la UI o mostrar un mensaje de éxito
+                      location.reload(); // Ahora se recarga la página después de procesar la respuesta
+                    })
+                    .catch(error => {
+                      alert('Error al completar la tarea: '); // Mostrar el mensaje de error
+                    });
+
+          }
+
+        </script>
+
+      </tr>
+      </tbody>
+    </table>
+    <div class="flex flex-col items-center">
+      <div class="inline-flex mt-2 xs:mt-0 space-x-2">
+        <button id="prevButton"
+                class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-800 rounded-md hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white transition-all duration-200">
+          <svg class="w-4 h-4 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+          </svg>
+        </button>
+
+        <button id="nextButton"
+                class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white bg-gray-800 border-0 rounded-md hover:bg-gray-900 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white transition-all duration-200">
+          <svg class="w-4 h-4 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          </svg>
+        </button>
+      </div>
+
+    </div>
+  </div>
+
+
+  <script>
+    window.onload = function() {
+
+      if (window.location.href.includes("/edit/")) {
+        openModal();
+      }
+
+      function openModal() {
+        const modal = document.getElementById('taskModalUpdate');
+        modal.classList.remove('hidden'); // Show the modal
+      }
+
+      document.getElementById('closeModal').addEventListener('click', function() {
+        const modal = document.getElementById('taskModalUpdate');
+        modal.classList.add('hidden'); // Hide the modal
+
+        history.pushState(null, '', window.location.pathname);
+      });
+
+
+    }
+    document.getElementById('nextButton').addEventListener('click', function() {
+      let currentUrl = window.location.href;
+      let url = new URL(currentUrl);
+      let pageParam = url.searchParams.get('page');
+      pageParam = pageParam ? parseInt(pageParam) : 0;
+      let nextPage = pageParam + 1;
+      url.searchParams.set('page', nextPage);
+      window.location.href = url.toString();
+    });
+    document.getElementById('prevButton').addEventListener('click', function() {
+      let currentUrl = window.location.href;
+      let url = new URL(currentUrl);
+      let pageParam = url.searchParams.get('page');
+      pageParam = pageParam ? parseInt(pageParam) : 0;
+
+      let customLabel = document.getElementById('prevButton');
+
+      if (pageParam > 0) {
+        let nextPage = pageParam - 1;
+        url.searchParams.set('page', nextPage);
+        window.location.href = url.toString();
+        if (pageParam ==0){
+          url.searchParams.delete('page');
+          window.location.href = url.toString();
+        }
+
+      }else if (pageParam > 1){
+        url.searchParams.delete('page');
+        window.location.href = url.toString();
+      }
+
+    });
+
+
+
+  </script>
+  <style>
+    .overflow-x-auto::-webkit-scrollbar {
+      height: 6px;
+    }
+    .overflow-x-auto::-webkit-scrollbar-track {
+      background: #e5e7eb; /* gris claro */
+      border-radius: 10px;
+    }
+    .overflow-x-auto::-webkit-scrollbar-thumb {
+      background: linear-gradient(#3b82f6, #5c9aff);
+      border-radius: 10px;
+    }
+    .overflow-x-auto::-webkit-scrollbar-thumb:hover {
+      background: #2563eb; /* azul más oscuro al pasar el mouse */
+    }
+  </style>
 </div>
